# unitree_legged_control

./: .gitignore  .gitmodules  README.md  UW_legged.sh  UW_legged_requirements.sh
unitree_legged_control/: CMakeLists.txt  package.xml
unitree_legged_control/csvs/: a1bag_2023-11-10-22-10-05.csv  backforthwalk.csv  idle.csv  pitch.csv  roll.csv  rollpitch.csv  trot.csv  trotturn.csv  walk.csv
unitree_legged_control/include/: PoseParse.h  StateEstimation.h  controllers.h  convert.h
unitree_legged_control/launch/: control_high.launch  keyboard_control.launch  real.launch  real_high.launch  real_high_walk.launch  record.launch  reset.launch
unitree_legged_control/launch/bagfiles/: 2023-11-16-01-03-11.bag  2024-02-05-02-58-02.bag  a1bag_2023-11-10-22-10-05.bag  backforthwalk.bag  pitch.bag  roll.bag  rollpitch.bag  trot.bag  trotturn.bag
unitree_legged_control/scripts/: LowStateParser.py  rosbag2csv.py
unitree_legged_control/src/exe/: A1_control.cpp  A1_control_high.cpp  A1_reset.cpp  control_via_H12.cpp  position_control_via_H12.cpp  ros_position_example.cpp  ros_transform.cpp  ros_udp.cpp  ros_udp_high.cpp  ros_udp_walk.cpp  ros_walk_example.cpp  ros_wireless_control.cpp  state_sub.cpp  twist_sub.cpp
unitree_legged_msgs/msg/: Cartesian.msg  HighState.msg  IMU.msg  LED.msg  LowCmd.msg  LowState.msg  MotorCmd.msg  MotorState.msg
unitree_legged_sdk/: CMakeLists.txt
unitree_legged_sdk/include/: unitree_wireless.h
unitree_legged_sdk/include/unitree_legged_sdk/: comm.h  udp.h  unitree_wireless.h
